<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Cemeo</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_meetings">Upcoming Meetings</string>
    <string name="page_timeframe">Timeframe</string>
    <string name="page_users">Users</string>
    <string name="page_user_data">User Information</string>
    <string name="page_contacts">Contacts</string>
    <string name="page_reqcontacts">RequiredContacts</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="page_propositions">Propositions</string>
    <string name="page_locations">Locations</string>
    <string name="page_summary">Summary</string>
    <string name="title_column">Title</string>
    <string name="meeting_location_column">Location</string>
    <string name="meeting_invitees_column">Invitees</string>
    <string name="meeting_room_column">Room</string>
    <string name="meeting_duration_column">Duration</string>
    <string name="meeting_date_column">Date</string>
    <string name="meeting_creator_column">Creator</string>
    <string name="meeting_time_column">Time</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="select_column">Select users</string>
    <string name="locations_column">Select Location</string>
    <string name="date_column">Date</string>
    <string name="error_loading_userinfo">Loading user info failed !</string>
    <string name="error_loading_users">Loading user list failed !</string>
    <string name="error_loading_news">Loading news failed!</string>
    <string name="error_loading_checkins">Loading check-ins failed!</string>
    <string name="error_loading_meetings">Loading meetings failed!</string>
    <string name="error_loading_propositions">Loading propositions failed!</string>
    <string name="error_loading_contacts">Loading contacts failed!</string>
    <string name="error_loading_locations">Loading locations failed!</string>
    <string name="no_users">No Users Available</string>
    <string name="no_news">No News Available</string>
    <string name="no_meetings">No Meetings Available</string>
    <string name="no_propositions">No Propositions Available</string>
    <string name="no_contacts">No Contacts Available</string>
    <string name="no_locations">No Locations Available</string>
    <string name="no_user_info">No User Information Available</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- GCM -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>


    <!-- Dialog -->
    <string name="dialog_title">Save meeting as draft ?</string>
    <string name="dialog_text">Unable to create a meeting at this time.</string>
    <string name="dialog_yes">Save as concept</string>
    <string name="dialog_no">Discard</string>


    <!-- DataStorage -->
    <string name="preference_file_key">cemeodatastoragefile1337</string>
    <string name="saved_user_id">userId</string>


    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timer">Timer</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="about_page">About</string>
    <string name="create_meeting_add">Add Contacts</string>
    <string name="create_meeting_req">Select Required</string>
    <string name="create_meeting_no_cont">No Contacts selected !</string>
    <string name="create_meeting_timeframe">Time Frame</string>
    <string name="create_meeting_location">Location</string>
    <string name="create_meeting_summary">Summary</string>
    <string name="create_meeting_next_addcontacts">Next</string>
    <string name="change_location_btn">Change location</string>
    <string name="create_meeting_next_timeframe">Next</string>
    <string name="label_btn_accept">Accept</string>
    <string name="label_btn_reject">Reject</string>
    <string name="label_btn_online">Online</string>
    <string name="label_btn_unconfirmed">Unconfirmed</string>
    <string name="create_meeting_next_create">Create Meeting!</string>
    <string name="settings_menu">Settings</string>
    <string name="about_menu">About</string>
    <string name="home">Home</string>
    <string name="label_welcome_text">Welcome , Please sign in</string>
    <string name="label_cegeka">Cegeka</string>
    <string name="label_change_status">Change status</string>


    <!-- Show meetings -->

    <string name="label_meeting_page_title">Meeting Information</string>


    <!-- Show Userinfo -->

    <string name="label_user_info">User Information</string>
    <string name="label_info_email">E-mail</string>
    <string name="label_info_firstname">Firstname</string>
    <string name="label_info_lastname">Lastname</string>
    <string name="label_info_location">Prefered Location</string>
    <string name="label_info_userid">User id</string>
    <string name="label_info_username">Username</string>

    <string name="label_info_loc_name">Name</string>
    <string name="label_info_loc_city">City</string>
    <string name="label_info_loc_street">Street</string>
    <string name="label_info_loc_country">Country</string>

    <string name="label_info_loc_changebtn">Change location</string>


    <!-- Create meeting -->

    <string name="lbl_summary_timeframe_column">Timeframe</string>
    <string name="lbl_summary_duration_column">Duration</string>
    <string name="lbl_summary_invitees_column">Invitees</string>
    <string name="lbl_summary_req_column">Required</string>

    <!-- Create meeting -->

    <string name="label_between">Between?</string>
    <string name="label_when">When?</string>
    <string name="label_duration">Duration?</string>


    <string-array name="date_array">
        <item>Today</item>
        <item>WithinThisWorkWeek</item>
        <item>Within7Days</item>
        <item>WithinThisMonth</item>
        <item>Within30Days</item>
        <item>BeforeADate</item>
    </string-array>


    <string-array name="duration_array">
        <item>30 min</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>Unknown</item>
        <item>All day</item>
    </string-array>

</resources>