<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_prop_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"
            android:textColor="@color/table_text_selector"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_prop_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/table_text_selector" />

        <TextView
            android:id="@+id/tv_prop_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/table_text_selector" />

        <TextView
            android:id="@+id/tv_prop_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/table_text_selector"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/tv_prop_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/label_change_status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/table_text_selector"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:layout_weight="0"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/unconfirmedbtn"
                style="@style/ShadowText"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:background="@drawable/button_background_orange"
                android:text="@string/label_btn_unconfirmed"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/rejectbtn"
                style="@style/ShadowText"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:background="@drawable/button_background_red"
                android:text="@string/label_btn_reject"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/onlinebtn"
                style="@style/ShadowText"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:background="@drawable/button_background_enabled"
                android:text="@string/label_btn_online"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/acceptbtn"
                style="@style/ShadowText"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:background="@drawable/button_background_green"
                android:text="@string/label_btn_accept"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"/>


        </LinearLayout>

    </LinearLayout>







</ScrollView>