<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_background"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:text="@string/home"
        android:layout_marginLeft="5dp"
        android:drawableLeft="@drawable/ic_home"
        style="@style/NavMenuButton"
        android:paddingLeft="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="left|center_vertical"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/vert_sep_color" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createmeeting"
        android:text="@string/create_meeting"
        android:drawableLeft="@drawable/ic_action_new"
        style="@style/NavMenuButton"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="left|center_vertical"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/vert_sep_color" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_menu"
        android:text="@string/settings_menu"
        android:drawableLeft="@drawable/ic_action_settings"
        style="@style/NavMenuButton"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="left|center_vertical"
        android:textSize="22sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/vert_sep_color" />


    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/NavMenuButton"
        android:gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="12sp" />


</LinearLayout>